[package]
edition = "2018"
name = "g"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", features=["serde"] }
okapi = "0.6.0-alpha-1"
once_cell = "1.8"
rocket = { version="0.5.0-rc.1", features=["json"] }
rocket_okapi = "0.7.0-alpha-1"
schemars = { version="0.8", features=["preserve_order", "chrono"] }
serde = { version="1.0", features=["derive"] }
rocket_prometheus = { git = "https://github.com/sd2k/rocket_prometheus", rev = "109ce2824e712cbabfab4f730ce50aa701d35eb5" }

[target.'cfg(target_os = "linux")'.dependencies]
prometheus = { version="0.12", features=["process"] }
